--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">M-Hike</string>
+    <string name="home">Home</string>
+    <string name="hike">Hike</string>
+    <string name="account">Account</string>
+    <string name="settings">Settings</string>
+    <string name="add">Add</string>
+    <string name="create_new_hike">Create new hike</string>
+    <string name="add_observation">Add observation</string>
+    <string name="new_record">New</string>
+    <string name="remove">Remove</string>
+    <string name="clear">Clear</string>
+    <string name="hiking">Hiking</string>
+    <string name="add_photo">Add photo</string>
 </resources>
