--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,7 +67,7 @@
         <item>Vegetation encounter</item>
         <item>Weather condition</item>
         <item>Trails condition</item>
-        <item>Sighting</item>
+        <item>Sight</item>
     </string-array>
 
 </resources>
