--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,6 @@
     <string name="app_name">M-Hike</string>
     <string name="home">Home</string>
     <string name="hike">Hike</string>
-    <string name="account">Account</string>
-    <string name="settings">Settings</string>
     <string name="add">Add</string>
     <string name="create_new_hike">Create new hike</string>
     <string name="add_observation">Add observation</string>
@@ -61,9 +59,10 @@
     <string name="search_for_hike">Search for hike</string>
     <string name="update_observation">Update observation</string>
     <string name="latitude">Latitude</string>
-    <string name="longtitude">Longtitude</string>
+    <string name="longitude">Longitude</string>
     <string name="observation_location">Observation Location</string>
     <string name="pick_new_location">Pick new location</string>
+    <string name="useful_equipments">Useful equipments</string>
 
     <string-array name="difficulty">
         <item>1 - Easy</item>
